--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,9 @@ jobs:
             - name: Setting up the environment
               run: mkdir build bin
 
+            - name: Getting dependencies
+              run: sudo apt-get install make git -y && sudo apt install gcc-14 g++-14 -y && sudo snap install cmake & sudo apt autoremove
+
             - name: Generate cmake project
               run: cmake -G "Unix Makefiles" -B build
 
